fetch: 댓글 기능 API Swagger 설명 추가